<resources>
    <string name="app_name">Statisfy</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="tab_text_1">SONGS</string>
    <string name="tab_text_2">ARTISTS</string>
    <string name="tab_text_3">GENRES</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="log_in">Log in</string>
    <string name="spotify_password">Spotify password</string>
    <string name="spotify_username">Spotify username</string>
    <string name="todo">TODO</string>
    <string name="sign_up">SIGN UP</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="settings">SETTINGS</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in_with_facebook">LOG IN WITH FACEBOOK</string>
    <string name="or">OR</string>
    <string name="statisfy">Statisfy</string>
    <string name="coming_soon">Coming soon</string>


</resources>
